--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/universite
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.open-in-view=true
+spring.jpa.show-sql=true
